<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <android.support.design.widget.TextInputLayout
        android:id="@+id/titleContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:paddingTop="20dp">

        <EditText
            android:id="@+id/titleEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:hint="@string/task_detail_title_hint"
            android:inputType="text" />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/descriptionContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleContainer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:paddingTop="20dp">

        <EditText
            android:id="@+id/descriptionEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:hint="@string/task_detail_description_hint"
            android:inputType="text"

            />

    </android.support.design.widget.TextInputLayout>


    <chga.ch.doit.ui.detail.AutoCompleteTextInputLayout
        android:id="@+id/groupContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/descriptionContainer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:paddingTop="20dp"

        >

        <AutoCompleteTextView
            android:id="@+id/groupEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:hint="@string/task_detail_group_hint"
            />

         </chga.ch.doit.ui.detail.AutoCompleteTextInputLayout>



    <android.support.design.widget.TextInputLayout
        android:id="@+id/dateContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/groupContainer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:paddingTop="20dp">

        <EditText
            android:id="@+id/dateEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:focusable="false"
            android:hint="@string/task_detail_date_hint"
            android:inputType="date" />

    </android.support.design.widget.TextInputLayout>

</RelativeLayout>