<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.list.TaskListActivity">


    <android.support.design.widget.AppBarLayout
        android:transitionName="task_list_background"
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/overview_collapse_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleMarginBottom="100dp"
            app:expandedTitleGravity="left"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">


            <RelativeLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true">

                <LinearLayout
                    android:id="@+id/completedContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="33dp"
                    android:layout_centerVertical="true"
                    >

                    <TextView
                        android:id="@+id/completedValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/completedLabel"
                        android:layout_alignBottom="@+id/completedLabel"
                        style="@style/TextAppearance.AppCompat.Small"
                        android:textStyle="bold"
                        android:text="0"
                        android:textColor="@android:color/white"
                        />
                    <TextView
                        android:id="@+id/completedLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/TextAppearance.AppCompat.Small"
                        android:text="@string/task_list_completed_label"
                        android:layout_marginLeft="5dp"
                         />

                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:layout_below="@+id/completedContainer"
                    android:id="@+id/todayContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="33dp"
                    android:layout_centerVertical="true"
                    >

                    <TextView
                        android:id="@+id/todayValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/TextAppearance.AppCompat.Small"
                        android:textStyle="bold"
                        android:text="0"
                        android:textColor="@android:color/white"
                        />
                    <TextView
                        android:id="@+id/todayLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/TextAppearance.AppCompat.Small"
                        android:text="@string/task_list_due_to_today_label"
                        android:layout_marginLeft="5dp"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:layout_below="@id/todayContainer"
                    android:id="@+id/overdueContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="33dp"
                    android:layout_centerVertical="true"
                    >

                    <TextView
                        android:id="@+id/overdueValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/TextAppearance.AppCompat.Small"
                        android:textStyle="bold"
                        android:text="0"
                        android:textColor="@android:color/white"
                        />
                    <TextView
                        android:id="@+id/overdueLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/TextAppearance.AppCompat.Small"
                        android:text="@string/task_list_date_label_overdue"
                        android:layout_marginLeft="5dp"
                        />

                </LinearLayout>



                <RelativeLayout
                    android:layout_marginBottom="32dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"

                    >


                    <FrameLayout
                        android:layout_alignParentBottom="true"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/activity_vertical_margin"

                        >


                        <com.github.mikephil.charting.charts.PieChart
                            android:id="@+id/piechart"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerHorizontal="true"
                            android:transitionName="piechart"
                            android:layout_margin="20dp"
                            />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="10dp">

                            <TextView
                                android:id="@+id/itemcount_textview"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                                android:layout_centerInParent="true"
                                android:textStyle="bold"
                                android:text="10"
                                />

                            <TextView
                                android:id="@+id/itemcount_textview_label"
                                android:layout_below="@id/itemcount_textview"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                                android:layout_centerHorizontal="true"
                                android:text="@string/overview_item_to_go"
                                android:layout_marginTop="-5dp"
                                />

                        </RelativeLayout>
                    </FrameLayout>
                </RelativeLayout>


            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:id="@+id/contentFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></FrameLayout>


</android.support.design.widget.CoordinatorLayout>